--- a/ssmm_core/package.xml
+++ b/ssmm_core/package.xml
@@ -8,14 +8,18 @@
   <license>TODO: License declaration</license>
 
   <depend>rclpy</depend>
+  <depend>rclcpp</depend>
   <depend>std_msgs</depend>
 
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
 
   <export>
-    <build_type>ament_python</build_type>
+    <!-- <build_type>ament_python</build_type> -->
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
