--- a/ssmm_bringup/CMakeLists.txt
+++ b/ssmm_bringup/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(ssmm_description)
+project(ssmm_bringup)
 
 # Default to C99
 if(NOT CMAKE_C_STANDARD)
@@ -16,17 +16,20 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 endif()
 
 install(DIRECTORY
-  urdf rviz worlds meshes
+  launch param worlds
   DESTINATION share/${PROJECT_NAME}/
 )
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-find_package(rclcpp REQUIRED)
-find_package(urdf REQUIRED)
+# uncomment the following section in order to fill in
+# further dependencies manually.
+# find_package(<dependency> REQUIRED)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
+  #set(ament_cmake_copyright_FOUND TRUE)
+  #set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
 
