--- a/ssmm_robot/package.xml
+++ b/ssmm_robot/package.xml
@@ -1,21 +1,22 @@
-<package format="2">
+<?xml version="1.0"?>
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
   <name>ssmm_robot</name>
-  <version>1.0.0</version>
-  <description>
-    <p>URDF Description package for ssmm_robot</p>
-    <p>This package contains configuration data, 3D models and launch files
-for ssmm_robot robot</p>
-  </description>
-  <author>TODO</author>
-  <maintainer email="TODO@email.com" />
-  <license>BSD</license>
-  <buildtool_depend>catkin</buildtool_depend>
-  <depend>roslaunch</depend>
-  <depend>robot_state_publisher</depend>
-  <depend>rviz</depend>
-  <depend>joint_state_publisher</depend>
-  <depend>gazebo</depend>
+  <version>0.0.0</version>
+  <description>TODO: Package description</description>
+  <maintainer email="nswve@naver.com">benlee</maintainer>
+  <license>TODO: License declaration</license>
+
+  <buildtool_depend>ament_cmake</buildtool_depend>
+  <depend>gazebo_ros</depend>
+  <depend>gazebo_plugins</depend>
+  <depend>rclcpp</depend>
+  <depend>std_msgs</depend>
+
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
+
   <export>
-    <architecture_independent />
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
