URDF from Fusion360

--- a/ssmm_bringup/CMakeLists.txt
+++ b/ssmm_bringup/CMakeLists.txt
@@ -16,7 +16,7 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 endif()
 
 install(DIRECTORY
-  launch param worlds
+  launch
   DESTINATION share/${PROJECT_NAME}/
 )
 
