--- a/ssmm_robot_description/package.xml
+++ b/ssmm_robot_description/package.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-<name>ssmm_robot_test_description</name>
+<name>ssmm_robot_description</name>
   <version>0.0.0</version>
-<description>The ssmm_robot_test_description package</description>
-  <maintainer email="nswve@naver.com">leehyungjin</maintainer>
+<description>The ssmm_robot_description package</description>
+  <maintainer email="e93052080@gmail.com">leehyungjin</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
@@ -12,10 +12,12 @@
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
   <depend>xacro</depend>
-  <!-- <depend>rviz2</depend>
+  <depend>rviz2</depend>
+  <depend>gazebo_ros</depend>
+  <depend>gazebo_plugins</depend>
   <depend>robot_state_publisher</depend>
   <depend>joint_state_publisher</depend>
-  <depend>joint_state_publisher_gui</depend> -->
+  <depend>joint_state_publisher_gui</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
